templates/api-deploy/deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: #{serviceName}
  namespace: #{k8sNamespace}
  name: #{serviceName}
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: #{serviceName}
